--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -16,3 +16,97 @@ img {
 }
 
 /* Voeg jouw css hieraan toe */
+
+nav{
+        
+    background-image: linear-gradient( rgb(255, 0, 0) 0%, rgb(255, 0, 0) 100%);
+    width: 100%;
+    text-align: right;
+  }
+  nav li{
+    display: inline-block;
+  }
+  nav li a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+    font-family: 'myriad Pro';
+    display: block;
+    padding: 30px 15px;
+    transition: .5s;
+  }
+  nav li a:hover {
+    background: rgb(29, 3, 90);
+  }
+
+
+
+
+
+
+
+
+  h2 {
+        
+    background-image: linear-gradient( rgb(255, 0, 0) 0%, rgb(255, 0, 0) 100%);
+    height: 850px;
+    width: 250px;
+    text-align: center;
+    
+    
+  }
+
+  h2 li{
+    display: vertical;
+  }
+ h2 li a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+    font-family: 'myriad Pro';
+    display: block;
+    padding: 30px 15px;
+    transition: .5s;
+  }
+  h2 li a:hover {
+    background: rgb(29, 3, 90);
+  }
+
+
+
+
+
+
+  a.button1 {
+    background-color: rgb(146, 148, 144);
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    border-top-right-radius: 50px;
+    color: black;
+    width: 5%;
+    display: block;
+    padding: 5px 3px;
+    text-align: center;  
+  }
+
+  a.button1:hover {
+    background: rgb(0, 255, 42);
+  }
+
+
+
+
+  a.button {
+    background-color: rgb(126, 250, 1);
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    border-top-right-radius: 50px;
+    color: black;
+    width: 5%;
+    display: block;
+    padding: 5px 3px;
+    text-align: center;  
+  }
+
