--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -27,7 +27,7 @@ img {
 
 nav{
         
-    background-image: linear-gradient( rgb(255, 0, 0) 0%, rgb(255, 0, 0) 100%);
+    background-image: linear-gradient( rgb(75, 36, 248) 0%, rgb(75, 36, 248) 100%);
     width: 100%;
     text-align: right;
   }
@@ -55,7 +55,7 @@ nav{
 
   h4 {
         
-    background-image: linear-gradient( rgb(255, 0, 0) 0%, rgb(255, 0, 0) 100%);
+    background-image: linear-gradient( rgb(75, 36, 248) 0%, rgb(75, 36, 248) 100%);
     height: 850px;
     width: 250px;
     text-align: center;
@@ -81,14 +81,10 @@ nav{
 
 
 
-
   
   h4 li a:hover {
     background: rgb(29, 3, 90);
   }
-
-
-
 
 
 
@@ -110,7 +106,22 @@ nav{
   }
 
 
+  a.button2 {
+    background-color: rgb(146, 148, 144);
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    border-top-right-radius: 50px;
+    color: black;
+    width: 5%;
+    display: block;
+    padding: 5px 3px;
+    text-align: center;  
+  }
 
+  a.button2:hover {
+    background: rgb(245, 57, 89);
+  }
 
   a.button {
     background-color: rgb(126, 250, 1);
@@ -124,4 +135,69 @@ nav{
     padding: 5px 3px;
     text-align: center;  
   }
+
+div{
+width: 60px;
+height: 60px;
+background-color: none;
+margin: 30px;
+position: relative;
+top: -790px;
+left: 400px
+
+
+}
+
+blockquote{
+float: center;
+width: 150px;
+font-size: 18px;
+padding: 25px;
+
+
+
+}
+
+#bordeaux{
+background-color: rgb(129, 7, 7);
+
+
+}
+
+#rood{
+  background-color: rgb(255, 0, 0);
+}
+
+#donkerrood{
+  background-color: rgb(83, 3, 3);
+}
+
+#blauw{
+  background-color: rgb(0, 0, 255);
+}
+
+#groen{
+  background-color: rgb(0, 128, 0);
+}
+
+#lichtgroen{
+  background-color: rgb(173, 255, 47);
+}
+
+#grijs{
+  background-color: rgb(128, 128, 128);
+}
+
+#lichtgrijs{
+  background-color: rgb(143, 137, 137);
+}
+
+#zwart{
+  background-color: rgb(10, 10, 10);
+}
+
+#paars{
+  background-color: rgb(32, 10, 114);
+  
+}
 
