--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -201,3 +201,21 @@ background-color: rgb(129, 7, 7);
   
 }
 
+p{
+  position: relative;
+  top: 80px;
+  left: 200px 
+}
+
+#Titels1{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-style: bold;
+}
+
+
+
+#Tekst1{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+}
