--- a/pages/css/pages.css
+++ b/pages/css/pages.css
@@ -123,6 +123,24 @@ nav{
     background: rgb(245, 57, 89);
   }
 
+  a.button3 {
+    background-color: rgb(146, 148, 144);
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    border-top-right-radius: 50px;
+    color: black;
+    width: 5%;
+    display: block;
+    padding: 5px 3px;
+    text-align: center;  
+    font-size: 15px;
+  }
+
+  a.button3{
+    background: rgb(245, 57, 89);
+  }
+
   a.button {
     background-color: rgb(126, 250, 1);
     border-top-left-radius: 50px;
@@ -219,6 +237,13 @@ p{
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
 }
+
+#Logo1{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 48px;
+}
+
+
 
 #fb{
   width: 150px;
